/**
 * Copyright Zendesk, Inc.
 *
 * Use of this source code is governed under the Apache License, Version 2.0
 * found at http://www.apache.org/licenses/LICENSE-2.0.
 */

import React from 'react';
import { shallow } from 'enzyme';
import { shallowWithTheme } from '@zendeskgarden/react-testing';

import RangeGroup from './RangeGroup';

describe('RangeGroup', () => {
  it('renders default styling', () => {
    const wrapper = shallow(<RangeGroup />);

    expect(wrapper).toHaveClassName('c-range');
  });

  it('renders RTL styling', () => {
    const wrapper = shallowWithTheme(<RangeGroup />, { rtl: true });

    expect(wrapper).toHaveClassName('is-rtl');
  });

  it('renders inline styling if provided', () => {
    const wrapper = shallow(<RangeGroup inline />);

    expect(wrapper).toHaveClassName('c-range--inline');
  });
});
