// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeGroup renders RTL styling 1`] = `
<div
  className="c-range is-rtl "
  data-garden-id="ranges.range_group"
  data-garden-version="version"
/>
`;

exports[`RangeGroup renders default styling 1`] = `
<div
  className="c-range "
  data-garden-id="ranges.range_group"
  data-garden-version="version"
/>
`;

exports[`RangeGroup renders inline styling if provided 1`] = `
<div
  className="c-range c-range--inline "
  data-garden-id="ranges.range_group"
  data-garden-version="version"
/>
`;
